--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Poetry Website</title>
+    <title>Siah Torac</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
 
     <section id="home">
         <h2>About Me</h2>
-        <p>Welcome to my poetry space where words come to life!</p>
+        <p>where words come to life!</p>
     </section>
 
     <section id="poems">
