--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siah Torac</title>
+    <meta name="google-site-verification" content="aF3cVRUs-GaTfnyZ9of1m-J1l33xH70sJ3_b7GO1ris" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
